--- a/Throttle_Extender_with_STM32.ioc
+++ b/Throttle_Extender_with_STM32.ioc
@@ -264,9 +264,13 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
 USB_DEVICE.CUSTOM_HID_FS_BINTERVAL=0x1
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,CUSTOM_HID_FS_BINTERVAL,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,CUSTOM_HID_FS_BINTERVAL,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,USBD_MAX_NUM_INTERFACES,USBD_MAX_NUM_CONFIGURATION,USBD_SELF_POWERED,USBD_DEBUG_LEVEL
 USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=64
-USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=47
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=49
+USB_DEVICE.USBD_DEBUG_LEVEL=3
+USB_DEVICE.USBD_MAX_NUM_CONFIGURATION=1
+USB_DEVICE.USBD_MAX_NUM_INTERFACES=1
+USB_DEVICE.USBD_SELF_POWERED=0
 USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
