ADC_DMAを用いたシステムとして動作を変更。

--- a/Throttle_Extender_with_STM32.ioc
+++ b/Throttle_Extender_with_STM32.ioc
@@ -272,7 +272,7 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
 USB_DEVICE.CUSTOM_HID_FS_BINTERVAL=0x1
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,CUSTOM_HID_FS_BINTERVAL,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,USBD_MAX_NUM_INTERFACES,USBD_MAX_NUM_CONFIGURATION,USBD_SELF_POWERED,USBD_DEBUG_LEVEL,LANGID_STRING,MANUFACTURER_STRING,PID_CUSTOMHID_FS,PRODUCT_STRING_CUSTOMHID_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,CUSTOM_HID_FS_BINTERVAL,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,USBD_MAX_NUM_INTERFACES,USBD_MAX_NUM_CONFIGURATION,USBD_SELF_POWERED,USBD_DEBUG_LEVEL,LANGID_STRING,MANUFACTURER_STRING,PID_CUSTOMHID_FS,PRODUCT_STRING_CUSTOMHID_FS,VID
 USB_DEVICE.LANGID_STRING=1041
 USB_DEVICE.MANUFACTURER_STRING=Nemuro
 USB_DEVICE.PID_CUSTOMHID_FS=0xa009
@@ -283,6 +283,7 @@ USB_DEVICE.USBD_DEBUG_LEVEL=3
 USB_DEVICE.USBD_MAX_NUM_CONFIGURATION=1
 USB_DEVICE.USBD_MAX_NUM_INTERFACES=1
 USB_DEVICE.USBD_SELF_POWERED=0
+USB_DEVICE.VID=0x483
 USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
