newfeature USBHIDレポートサイズを21ボタンに拡張、TDC操作ボタンを追加

--- a/Throttle_Extender_with_STM32.ioc
+++ b/Throttle_Extender_with_STM32.ioc
@@ -233,7 +233,7 @@ ProjectManager.ProjectName=Throttle_Extender_with_STM32
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
@@ -278,7 +278,7 @@ USB_DEVICE.MANUFACTURER_STRING=Nemuro
 USB_DEVICE.PID_CUSTOMHID_FS=0xa009
 USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=Throttle_Enhancer_with_STM32
 USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=64
-USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=49
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=57
 USB_DEVICE.USBD_DEBUG_LEVEL=3
 USB_DEVICE.USBD_MAX_NUM_CONFIGURATION=1
 USB_DEVICE.USBD_MAX_NUM_INTERFACES=1
@@ -291,4 +291,3 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=custom
-isbadioc=false
